add profile page for new button

--- a/AndroidRTC-android-studio/webrtc-client/build.gradle
+++ b/AndroidRTC-android-studio/webrtc-client/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
-    compile 'com.github.nkzawa:socket.io-client:0.4.2'
+    compile ('com.github.nkzawa:socket.io-client:0.4.2'){
+        exclude group: 'org.json', module: 'json'
+    }
     compile 'io.pristine:libjingle:8871@aar'
 }
