--- a/AndroidRTC-android-studio/app/src/main/AndroidManifest.xml
+++ b/AndroidRTC-android-studio/app/src/main/AndroidManifest.xml
@@ -17,7 +17,28 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <application android:label="@string/app_name"  android:allowBackup="true">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.LoginRegister"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http"
+                    android:host="learn2crack" />
+
+            </intent-filter>
+        </activity>
         <activity android:name="RtcActivity"
             android:label="@string/app_name"
             android:screenOrientation="fullUser"
