--- a/AndroidRTC-android-studio-sprint3/app/build.gradle
+++ b/AndroidRTC-android-studio-sprint3/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
     compile project(':webrtc-client')
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
