--- a/AndroidRTC-android-studio/app/src/main/AndroidManifest.xml
+++ b/AndroidRTC-android-studio/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
 
             </intent-filter>
         </activity>
+
         <activity android:name="RtcActivity"
             android:label="@string/app_name"
             android:screenOrientation="fullUser"
@@ -55,5 +56,9 @@
                     android:host="@string/host" />
             </intent-filter>
         </activity>
+
+        <activity
+        android:name=".ProfileActivity"
+        android:theme="@style/AppTheme.Profile"/>
     </application>
 </manifest>
